--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "index.html",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#0e0c1a",
-  "theme_color": "#0e0c1a",
+  "background_color": "#000",
+  "theme_color": "#000",
   "icons": [
     {
       "src": "https://iili.io/FbndiJt.png",
